manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: http-web-server
  name: http-web-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-web-server
  template:
    metadata:
      labels:
        app: http-web-server
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
