manifests/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-server
  labels:
    role: myrole
    app: ws
spec:
  containers:
  - name: web-server
    image: nginx
    resources: 
      requests: 
        memory: "128Mi"
        cpu: "125m" 
      limits: 
        memory: "256Mi"
        cpu: "250m" 
    ports:
    - name: http
      containerPort: 80
      protocol: TCP
