manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: http-web-server
  name: http-web-server
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: http-web-server
  type: ClusterIP
